javascript_firststep_recorrection

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <label  for="lname">Last name:</label><br>
         <input type="text" id="lname" name="lname"  required><br>
         <label  for="phname">Phone number:</label><br>
-        <input type="number" name="phone" >
+        <input type="number" id="phone" name="phone" >
         <br><br>
         <input type="submit" value="Submit">
         <p id="demo2"></p>
